# ai-train-2026

./: .gitignore  pyproject.toml
ai_train_2026/: a.py  common.py  host_check.py  main.py  talk_to_me.py  tech_gpt_neox.py  train.py
